# ChangeLog for media-plugins/alsa-jack
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-jack/ChangeLog,v 1.31 2005/05/05 17:51:21 eradicator Exp $

*alsa-jack-1.0.9_rc3 (05 May 2005)

  05 May 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -alsa-jack-1.0.9_rc2.ebuild, +alsa-jack-1.0.9_rc3.ebuild:
  Version bump.

*alsa-jack-1.0.9_rc2 (31 Mar 2005)

  31 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +alsa-jack-1.0.9_rc2.ebuild:
  Version bump.

  29 Mar 2005; Markus Rothe <corsair@gentoo.org> alsa-jack-1.0.8.ebuild:
  Stable on ppc64

  20 Mar 2005; Lars Weiler <pylon@gentoo.org> alsa-jack-1.0.8.ebuild:
  Stable on ppc.

  16 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -alsa-jack-1.0.5.ebuild, -alsa-jack-1.0.6.ebuild,
  -alsa-jack-1.0.8_rc1.ebuild:
  Removing old versions.

  09 Mar 2005; Mike Gardiner <obz@gentoo.org> alsa-jack-1.0.7.ebuild:
  Keyworded ppc

  08 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-jack-1.0.8.ebuild:
  Stable amd64, sparc, x86.

  25 Jan 2005; Markus Rothe <corsair@gentoo.org> alsa-jack-1.0.7.ebuild:
  Stable on ppc64

*alsa-jack-1.0.8 (22 Jan 2005)

  22 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +alsa-jack-1.0.8.ebuild:
  Version bump.

*alsa-jack-1.0.8_rc1 (01 Jan 2005)

  01 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +alsa-jack-1.0.8_rc1.ebuild:
  Version bump.

  18 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-jack-1.0.7.ebuild:
  Stable amd64, x86.

  16 Dec 2004; Markus Rothe <corsair@gentoo.org> alsa-jack-1.0.6.ebuild:
  Stable on ppc64

  22 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-jack-1.0.7.ebuild:
  Stable sparc. This is package.mask'd in the normal sparc profiles. Use the
  default-linux/sparc/sparc64/2004.3/alsa profile if you want to use alsa on
  sparc.

*alsa-jack-1.0.7 (12 Nov 2004)

  12 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>