@@ -1,18 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 4a09b7f4dbce854117e1910dc55bc56f ChangeLog 4183
-MD5 9936c8dd5f217eb65ad7f0a0a24e25f4 alsa-jack-1.0.7.ebuild 857
-MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 MD5 2b4cbae2a3c1316608b17d6f802a1ce0 alsa-jack-1.0.8.ebuild 861
+MD5 9936c8dd5f217eb65ad7f0a0a24e25f4 alsa-jack-1.0.7.ebuild 857
 MD5 ac585c56eaca324fe2f8dfa7809d09f4 alsa-jack-1.0.9_rc3.ebuild 815
+MD5 a8be97a46a4d09b936b908b197fe15a6 alsa-jack-1.0.9.ebuild 810
+MD5 c94155b6416e7ca5ff471e7e20f70089 ChangeLog 4337
+MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 MD5 86565eb0601b611f39adb8f5ad47b622 files/digest-alsa-jack-1.0.7 67
-MD5 98b26b25de518a595313af2cec71b9c2 files/digest-alsa-jack-1.0.9_rc3 74
 MD5 46a389b403bc763310e942cc9fc6d7b1 files/digest-alsa-jack-1.0.8 67
+MD5 115de3eba9191ee02931872cba635edf files/digest-alsa-jack-1.0.9 71
+MD5 98b26b25de518a595313af2cec71b9c2 files/digest-alsa-jack-1.0.9_rc3 74
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.1 (GNU/Linux)
+Version: GnuPG v1.4.0 (GNU/Linux)
 
-iD8DBQFCel03ArHZZzCEUG0RAgnHAJ9M+NeAp+gq2Zexj+4i4hKX+X/vTACfcGkl
-nsYHt3LSO8RMsMrL+uQbJZs=
-=5iTR
+iD8DBQFCl4VX06ebR+OMO78RAigyAJ9rXpZD+1CtAzTAl0lKusCzelwN9gCggvpP
+7BCY/pPa+wVAmjfwQlYJZKM=
+=INb5
 -----END PGP SIGNATURE-----
